--- a/DbLogin.xaml
+++ b/DbLogin.xaml
@@ -3,20 +3,24 @@
        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"  
         Title="Login" Height="387" Width="528" Background="Black">
     <Grid  Height="350" Width="525" Background="Purple">
-        <TextBlock Height="23" HorizontalAlignment="Left" Margin="10,5,0,0" Name="textBlockHeading" Text="Connect" VerticalAlignment="Top" Width="110"  FontSize="17" FontStretch="ExtraCondensed"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="47*"/>
+            <ColumnDefinition Width="28*"/>
+        </Grid.ColumnDefinitions>
+        <TextBlock Height="23" HorizontalAlignment="Left" Margin="10,5,0,0" Name="textBlockHeading" Text="Connect" VerticalAlignment="Top" Width="110"  FontSize="17" FontStretch="ExtraCondensed" Foreground="White"/>
 
         <!--end Button as a Link button using style-->
-        <Grid Margin="31,0,29,23" Background="White" Height="264" VerticalAlignment="Bottom">
+        <Grid Margin="31,0,29,23" Background="White" Height="264" VerticalAlignment="Bottom" Grid.ColumnSpan="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="252*" />
                 <!--   <RowDefinition Height="12*" />-->
             </Grid.RowDefinitions>
-            <TextBlock Height="20" HorizontalAlignment="Left" Margin="67,0,0,0" x:Name ="errormessage" VerticalAlignment="Top" Width="247"  OpacityMask="Crimson" Foreground="AliceBlue" />
+            <TextBlock Height="23" HorizontalAlignment="Left" Margin="67,0,0,0" x:Name ="errorMessage" VerticalAlignment="Top" Width="376"  OpacityMask="Crimson" Foreground="Crimson" />
             <TextBlock Height="23" HorizontalAlignment="Left" Margin="67,50,0,0" Name="textBlockHostName" Text="Hostname:" VerticalAlignment="Top" Width="110" />
             <TextBlock Height="23" HorizontalAlignment="Left" Margin="67,80,0,0" Name="textBlockUsername" Text="Username" VerticalAlignment="Top" Width="110" />
             <TextBlock Height="23" HorizontalAlignment="Left" Margin="67,110,0,0" Name="textBlockPassword" Text="Password:" VerticalAlignment="Top" Width="110"  />
             <TextBlock Height="23" HorizontalAlignment="Left" Margin="67,140,0,0" Name="textBlockPort" Text="Port:" VerticalAlignment="Top" Width="110"  />
-                      
+
             <TextBox Height="23" HorizontalAlignment="Left" Margin="183,50,0,0" Name="textBoxHostname" VerticalAlignment="Top" Width="222" />
             <TextBox Height="23" HorizontalAlignment="Left" Margin="183,80,0,0" Name="textBoxUsername" VerticalAlignment="Top" Width="222" />
             <PasswordBox Height="23" HorizontalAlignment="Left" Margin="183,110,0,0" Name="passwordBox" VerticalAlignment="Top" Width="222" />
