--- a/DbLogin.xaml
+++ b/DbLogin.xaml
@@ -7,7 +7,7 @@
             <ColumnDefinition Width="47*"/>
             <ColumnDefinition Width="28*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Height="23" HorizontalAlignment="Left" Margin="10,5,0,0" Name="textBlockHeading" Text="Connect" VerticalAlignment="Top" Width="110"  FontSize="17" FontStretch="ExtraCondensed" Foreground="White"/>
+        <TextBlock Height="23" HorizontalAlignment="Left" Margin="10,5,0,0" Name="textBlockHeading" Text="Connect" VerticalAlignment="Top" Width="486"  FontSize="17" FontStretch="ExtraCondensed" Foreground="White" Grid.ColumnSpan="2"/>
 
         <!--end Button as a Link button using style-->
         <Grid Margin="31,0,29,23" Background="White" Height="264" VerticalAlignment="Bottom" Grid.ColumnSpan="2">
@@ -21,9 +21,9 @@
             <TextBlock Height="23" HorizontalAlignment="Left" Margin="67,110,0,0" Name="textBlockPassword" Text="Password:" VerticalAlignment="Top" Width="110"  />
             <TextBlock Height="23" HorizontalAlignment="Left" Margin="67,140,0,0" Name="textBlockPort" Text="Port:" VerticalAlignment="Top" Width="110"  />
 
-            <TextBox Height="23" HorizontalAlignment="Left" Margin="183,50,0,0" Name="textBoxHostname" VerticalAlignment="Top" Width="222" />
-            <TextBox Height="23" HorizontalAlignment="Left" Margin="183,80,0,0" Name="textBoxUsername" VerticalAlignment="Top" Width="222" />
-            <PasswordBox Height="23" HorizontalAlignment="Left" Margin="183,110,0,0" Name="passwordBox" VerticalAlignment="Top" Width="222" />
+            <TextBox Height="23" HorizontalAlignment="Left" Margin="183,50,0,0" Name="textBoxHostname" VerticalAlignment="Top" Width="222" Text=""/>
+            <TextBox Height="23" HorizontalAlignment="Left" Margin="183,80,0,0" Name="textBoxUsername" VerticalAlignment="Top" Width="222" Text="" />
+            <PasswordBox Height="23" HorizontalAlignment="Left" Margin="183,110,0,0" Name="passwordBox" VerticalAlignment="Top" Width="222"/>
             <TextBox Height="23" HorizontalAlignment="Left" Margin="183,140,0,0" Name="portNumber" VerticalAlignment="Top" Width="222" />
             <Button Content="Submit" Height="23" HorizontalAlignment="Left" Margin="183,204,0,0" Name="Submit" VerticalAlignment="Top" Width="131" Click="Submit_Click" />
         </Grid>
