--- a/QueryManager.xaml
+++ b/QueryManager.xaml
@@ -5,9 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AscendQueryEngine"
         mc:Ignorable="d"
-        Title="QueryManager" Height="800" Width="1500">
+        Title="QueryManager" Height="800" Width="1290">
     <Grid Margin="10,10,2,-21">
         <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Ascend Query Manager" VerticalAlignment="Top" Height="50" Width="303" FontSize="25"/>
+        <ListBox HorizontalAlignment="Left" Height="442" Margin="53,151,0,0" VerticalAlignment="Top" Width="345" x:Name="ViewListBox"/>
+        <ListBox HorizontalAlignment="Left" Height="442" Margin="457,151,0,0" VerticalAlignment="Top" Width="345" x:Name="ColumnsListBox" SelectionMode="Multiple"/>
+        <ListBox HorizontalAlignment="Left" Height="379" Margin="861,151,0,0" VerticalAlignment="Top" Width="293" x:Name="ConditionsListBox"/>
+        <Label Content="View Select" HorizontalAlignment="Left" Margin="96,108,0,0" VerticalAlignment="Top" Height="38" Width="166" RenderTransformOrigin="0.5,0.5" FontSize="20"/>
+        <Label Content="Column Select" HorizontalAlignment="Left" Margin="493,108,0,0" VerticalAlignment="Top" Height="38" Width="166" RenderTransformOrigin="0.5,0.5" FontSize="20 "/>
+        <Button Content="Select" HorizontalAlignment="Left" Margin="224,116,0,0" VerticalAlignment="Top" Width="108" Height="24" Click="ViewSelect_Click" x:Name="ViewButton"/>
+        <Button Content="Select" HorizontalAlignment="Left" Margin="659,116,0,0" VerticalAlignment="Top" Width="108" Height="24" Click="ColumnSelect_Click" x:Name="ColumnButton"/>
+        <Label Content="Conditions" HorizontalAlignment="Left" Margin="959,108,0,0" VerticalAlignment="Top" Height="38" Width="105" RenderTransformOrigin="0.5,0.5" FontSize="20 "/>
+        <Button Content="Back" HorizontalAlignment="Left" Margin="807,333,0,0" VerticalAlignment="Top" Width="49" Height="28" x:Name="BackToCol" Click="BackToCol_Click"/>
+        <Button Content="Back" HorizontalAlignment="Left" Margin="403,333,0,0" VerticalAlignment="Top" Width="49" Height="28" x:Name="BackToView" Click="BackToView_Click"/>
+        <TextBox HorizontalAlignment="Left" Height="58" Margin="930,535,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="147" x:Name="InputBox" FontSize="14"/>
+        <ComboBox HorizontalAlignment="Left" Margin="861,535,0,0" VerticalAlignment="Top" Width="64" Height="58" Name="ComparatorBox" FontSize="20"/>
+        <Button Content="Add" HorizontalAlignment="Left" Margin="1082,535,0,0" VerticalAlignment="Top" Width="72" Height="58" Name="AppendQueryButton"/>
+        <TextBox HorizontalAlignment="Left" Height="49" Margin="53,629,0,0" TextWrapping="Wrap" Name="FullQueryBox" VerticalAlignment="Top" Width="1101" IsEnabled="False"/>
+        <Label Content="Full Query" HorizontalAlignment="Left" Margin="53,603,0,0" VerticalAlignment="Top" Width="102"/>
+        <Image HorizontalAlignment="Left" Height="100" Margin="1435,131,-265,0" VerticalAlignment="Top" Width="100"/>
 
     </Grid>
 </Window>
